--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -18,7 +18,12 @@ body {
 	height: 100vh;
 	background-color: #ecf0f9;
 	background-attachment: fixed;
+	position: relative;
 
+}
+
+.container {
+	margin-top: 100px;
 }
 
 .large {
@@ -70,6 +75,47 @@ p.overview {
 	margin-top: 0;
 	margin-left: 1rem;
 	margin-bottom: 3rem;
+}
+
+.navbar {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 2;
+}
+
+.navbar-brand {
+	padding-top: 0.8rem;
+	font-size: 2rem;
+}
+
+.two-column {
+	display: flex;
+	justify-content: space-between;
+}
+
+.two-column .left {
+	width: 45%;
+	height: 700px;
+}
+
+.two-column .right {
+	width: 45%;
+	display: flex;
+	flex-direction: column;
+}
+
+.two-column .left img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+
+}
+
+.two-column .right .trailor {
+	width: 100%;
+	height: 50%;
+
 }
 
 .card-container {
