--- a/app/templates/select.html
+++ b/app/templates/select.html
@@ -5,8 +5,12 @@
 {{ super() }}
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+
 {% endblock %}
+{% include "nav.html" %}
 
 {% block title %}Select Movie{% endblock %}
 
