--- a/app/templates/show.html
+++ b/app/templates/show.html
@@ -8,8 +8,13 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
   integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
   crossorigin="anonymous" />
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+
+
 {% endblock %}
+{% include "nav.html" %}
 
 {% block title %}My Movies{% endblock %}
 
@@ -17,7 +22,9 @@
 <div class="container">
   <h1 class="heading">My Movies</h1>
   <p class="description">These are the movies I have watched.</p>
-
+  <div class="container text-center add">
+    <a href="{{url_for('movies.add_movie')}}" class="button">Add Movie</a>
+  </div>
   <div class="card-container">
     {% for movie in movies%}
     <div class="card">
@@ -32,9 +39,6 @@
             <i class="fas fa-star star"></i>
           </div>
           <p class="review">{{movie.review}}</p>
-          <p class="overview">
-            {{movie.description}}
-          </p>
 
           <a href="{{url_for('movies.edit', movie_id=movie.id)}}" class="button">Update</a>
           <a href="{{url_for('movies.delete', movie_id=movie.id)}}" class="button delete-button">Delete</a>
@@ -46,8 +50,6 @@
   </div>
 
 </div>
-<div class="container text-center add">
-  <a href="{{url_for('movies.add_movie')}}" class="button">Add Movie</a>
-</div>
+
 
 {% endblock %}
