--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -12,12 +12,14 @@
 {% endblock %}
 
 {% block title %}Edit Movies{% endblock %}
+{% include "nav.html" %}
 
 {% block content %}
+<div class="container">
+  <div class="content">
+    <h1 class="heading">Your Review</h1>
+    {{ wtf.quick_form(form, novalidate=True) }}
 
-<div class="content">
-  <h1 class="heading">Edit Rating</h1>
-  {{ wtf.quick_form(form, novalidate=True) }}
-
+  </div>
 </div>
 {% endblock %}
