--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,8 +18,10 @@
 
 
 <div class="container">
-    <h1 class="heading">Popular Movies</h1>
-    <div class="card-containter">
+    {% include 'message.html' %}
+
+    <h1 class="heading">Explore and Find Your Favorite Movie </h1>
+    <div id="all-movies" class="card-containter">
         {% for movie in movies%}
         <a href="{{url_for('movies.show_one_movie', id=movie.id)}}"><img
                 src="https://image.tmdb.org/t/p/w500{{movie['poster_path']}}" alt="movie_picture" width="250"></a>
@@ -27,4 +29,10 @@
     </div>
 
 </div>
+
+<script src="{{ url_for('static', filename='js/index.js') }}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+
 {% endblock %}
