--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -6,24 +6,20 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 
 {% endblock %}
 {% include "nav.html" %}
 
-{% block title %}Search Results{% endblock %}
+{% block title %}Add Movie{% endblock %}
 
 {% block content %}
-
 <div class="container">
+  <div class="content">
     <h1 class="heading">Search Movies</h1>
+    {{ wtf.quick_form(form, novalidate=True) }}
 
-    {% for movie in movies%}
-
-    <img src="https://image.tmdb.org/t/p/w500{{movie['poster_path']}}" alt="movie_picture" width="250">
-
-    {% endfor%}
+  </div>
 </div>
-
 {% endblock %}
