--- a/app/templates/select.html
+++ b/app/templates/select.html
@@ -8,7 +8,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-
+<link rel="stylesheet" href="{{ url_for('static', filename='css/select.css') }}">
 {% endblock %}
 {% include "nav.html" %}
 
@@ -19,10 +19,11 @@
   <h1 class="heading">Select Movie</h1>
 
   {% for movie in movies%}
-
-  <a href="{{url_for('movies.find_movie', id=movie.id)}}"> <img
-      src="https://image.tmdb.org/t/p/w500{{movie['poster_path']}}" alt="movie_picture" width="250"></a>
-
+  <div class="movie-card">
+    <a id="view-movie" href="{{url_for('movies.show_one_movie', id=movie.id)}}"><img
+        src="https://image.tmdb.org/t/p/w500{{movie['poster_path']}}" alt="movie_picture" width="250"></a>
+    <a id="add_movie" href="{{url_for('movies.find_movie', id=movie.id)}}">add to my movies</a>
+  </div>
   {% endfor%}
 </div>
 
