--- a/app/templates/show.html
+++ b/app/templates/show.html
@@ -4,13 +4,12 @@
 {{ super() }}
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
   integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
   crossorigin="anonymous" />
-<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/show.css') }}">
+
 
 
 {% endblock %}
@@ -20,10 +19,11 @@
 
 {% block content %}
 <div class="container">
+
   <h1 class="heading">My Movies</h1>
   <p class="description">These are the movies I have watched.</p>
   <div class="container text-center add">
-    <a href="{{url_for('movies.add_movie')}}" class="button">Add Movie</a>
+    <a href="{{url_for('movies.search_movie')}}" class="button">Add Movie</a>
   </div>
   <div class="card-container">
     {% for movie in movies%}
@@ -32,7 +32,7 @@
         <p class="large">{{movie.ranking}}</p>
       </div>
       <div class="back">
-        <div>
+        <div class="back-content">
           <div class="title">{{movie.title}} <span class="release_date">({{movie.year}})</span></div>
           <div class="rating">
             <label>{{movie.rating}}</label>
