--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{url_for('home.show_popular_movies')}}">Movie Master</a>
+        <a class="navbar-brand" href="{{url_for('home.show_all_movies')}}">Movie Master</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="{{url_for('home.show_popular_movies')}}">Explore
+                <a class="nav-link" href="{{url_for('home.show_all_movies')}}">Explore
                     Movies</a>
                 <a class="nav-link" href="{{url_for('movies.show_my_movies')}}">My Movies</a>
                 <a class="nav-link" href="{{url_for('movies.search_movie')}}">Search Movies</a>
