--- a/app/templates/detail.html
+++ b/app/templates/detail.html
@@ -1,21 +1,11 @@
-{% extends 'bootstrap/base.html' %}
+{% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block styles %}
-{{ super() }}
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-
-{% endblock %}
-
 {% block title %}{{movie.title}}{% endblock %}
-{% include "nav.html" %}
 
 {% block content %}
 <div class="container">
+
     <div class="two-column">
         <div class="left">
             <img src="https://image.tmdb.org/t/p/w500{{movie['poster_path']}}" alt="movie_picture" width="250">
@@ -25,9 +15,9 @@
             <p>{{movie.release_date.split("-")[0]}}</p>
             <p>{{movie.overview}}</p>
             <iframe class="trailor" src="{{video_path}}" allowfullscreen="" frameborder="0"></iframe>
-            <a href="{{url_for('movies.find_movie', id=movie.id)}}">Add to My Movies</a>
+            <a class='button' href="{{url_for('movies.find_movie', id=movie.id)}}">Add to My Movies</a>
         </div>
     </div>
-
 </div>
+
 {% endblock %}
