--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,38 +1,31 @@
-{% extends 'bootstrap/base.html' %}
+{% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block styles %}
-{{ super() }}
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-
-{% endblock %}
-
-{% block title %}All Movies{% endblock %}
-{% include "nav.html" %}
+{% block title %}Movie Master{% endblock %}
 
 {% block content %}
-
-
-<div class="container">
-    {% include 'message.html' %}
-
-    <h1 class="heading">Explore and Find Your Favorite Movie </h1>
-    <div id="all-movies" class="card-containter">
-        {% for movie in movies%}
-        <a href="{{url_for('movies.show_one_movie', id=movie.id)}}"><img
-                src="https://image.tmdb.org/t/p/w500{{movie['poster_path']}}" alt="movie_picture" width="250"></a>
-        {% endfor%}
-    </div>
-
+{% include 'message.html' %}
+<div class="hero">
+    <h1 class="title">Movie Master</h1>
 </div>
 
-<script src="{{ url_for('static', filename='js/index.js') }}"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
+<div class="container main">
+    <h1 class="heading trending">Trending</h1>
+    <p class="description">Explore and Find Your Favorite Movies.</p>
+    <div class="card-containter">
+        {% for movie in movies%}
+        <div class="poster">
+            <div class="front"
+                style="background-image: url('https://image.tmdb.org/t/p/w500{{movie['poster_path']}}');">
+                <a href="{{url_for('movies.show_one_movie', id=movie.id)}}">
+                    <span class="link"></span>
+                </a>
+            </div>
+        </div>
+        {% endfor%}
+
+    </div>
+</div>
+
 
 {% endblock %}
