--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,25 +1,12 @@
-{% extends 'bootstrap/base.html' %}
+{% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
-
-{% block styles %}
-{{ super() }}
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-
-{% endblock %}
-{% include "nav.html" %}
 
 {% block title %}Add Movie{% endblock %}
 
 {% block content %}
 <div class="container">
-  <div class="content">
-    <h1 class="heading">Search Movies</h1>
-    {{ wtf.quick_form(form, novalidate=True) }}
 
-  </div>
+  <h1 class="heading">Search Movies</h1>
+  {{ wtf.quick_form(form, novalidate=True)}}
 </div>
 {% endblock %}
