--- a/app/templates/select.html
+++ b/app/templates/select.html
@@ -1,30 +1,39 @@
-{% extends 'bootstrap/base.html' %}
+{% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block styles %}
-{{ super() }}
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/select.css') }}">
-{% endblock %}
-{% include "nav.html" %}
-
-{% block title %}Select Movie{% endblock %}
+{% block title %}Add Movie{% endblock %}
 
 {% block content %}
-<div class="container">
-  <h1 class="heading">Select Movie</h1>
 
-  {% for movie in movies%}
-  <div class="movie-card">
-    <a id="view-movie" href="{{url_for('movies.show_one_movie', id=movie.id)}}"><img
-        src="https://image.tmdb.org/t/p/w500{{movie['poster_path']}}" alt="movie_picture" width="250"></a>
-    <a id="add_movie" href="{{url_for('movies.find_movie', id=movie.id)}}">add to my movies</a>
+<!-- <div class="container">
+  <h1 class="heading">Select Movie</h1>
+  <div id="all-movies" class="card-containter">
+    {% for movie in movies%}
+    <div class="movie-card">
+      <a id="view-movie" href="{{url_for('movies.show_one_movie', id=movie.id)}}"><img
+          src="https://image.tmdb.org/t/p/w500{{movie['poster_path']}}" alt="movie_picture" width="250"></a>
+      <a id="add_movie" href="{{url_for('movies.find_movie', id=movie.id)}}">add to my movies</a>
+    </div>
+    {% endfor%}
   </div>
-  {% endfor%}
+
+</div> -->
+<div class="container">
+  <h1 class="heading">Select Movie </h1>
+  <div id="all-movies" class="card-containter">
+    {% for movie in movies%}
+    <div class="poster">
+      <div class="front" style="background-image: url('https://image.tmdb.org/t/p/w500{{movie['poster_path']}}');">
+        <a href="{{url_for('movies.show_one_movie', id=movie.id)}}">
+          <span class="link"></span>
+        </a>
+        <a class='button add-btn' href="{{url_for('movies.find_movie', id=movie.id)}}">Add to My Movies</a>
+      </div>
+    </div>
+    {% endfor%}
+  </div>
 </div>
+
+
 
 {% endblock %}
