--- a/app/templates/show.html
+++ b/app/templates/show.html
@@ -1,30 +1,16 @@
-{% extends 'bootstrap/base.html' %}
-
-{% block styles %}
-{{ super() }}
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-  integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
-  crossorigin="anonymous" />
-<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/show.css') }}">
-
-
-
-{% endblock %}
-{% include "nav.html" %}
+{% extends 'base.html' %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}My Movies{% endblock %}
 
 {% block content %}
 <div class="container">
-
   <h1 class="heading">My Movies</h1>
   <p class="description">These are the movies I have watched.</p>
-  <div class="container text-center add">
+  <div class="add">
     <a href="{{url_for('movies.search_movie')}}" class="button">Add Movie</a>
   </div>
+
   <div class="card-container">
     {% for movie in movies%}
     <div class="card">
@@ -48,8 +34,5 @@
     </div>
     {% endfor %}
   </div>
-
 </div>
-
-
 {% endblock %}
