--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -12,6 +12,10 @@
                 <a class="nav-link" href="{{url_for('movies.show_my_movies')}}">My Movies</a>
                 <a class="nav-link" href="{{url_for('movies.search_movie')}}">Search Movies</a>
             </div>
+            <div class="navbar-nav user">
+                <a class="nav-link" href="#">Sign Up</a>
+                <a class="nav-link" href="#">Log In</a>
+            </div>
         </div>
     </div>
 </nav>
