--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -4,9 +4,11 @@
 {% block title %}Add Movie{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="form-container">
+  <div id="search-form">
 
-  <h1 class="heading">Search Movies</h1>
-  {{ wtf.quick_form(form, novalidate=True)}}
+    <h1 class="heading">Search Movies</h1>
+    {{ wtf.quick_form(form, novalidate=True)}}
+  </div>
 </div>
 {% endblock %}
