ready for deploy

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,21 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{url_for('home.show_all_movies')}}">Movie Master</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" href="{{url_for('home.show_all_movies')}}">Explore
-                    Movies</a>
-                <a class="nav-link" href="{{url_for('movies.show_my_movies')}}">My Movies</a>
-                <a class="nav-link" href="{{url_for('movies.search_movie')}}">Search Movies</a>
-            </div>
-            <div class="navbar-nav user">
-                <a class="nav-link" href="#">Sign Up</a>
-                <a class="nav-link" href="#">Log In</a>
-            </div>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('home.show_all_movies')}}">Explore
+                        Movies</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('movies.show_my_movies')}}">My Movies</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('movies.search_movie')}}">Search Movies</a>
+                </li>
+
+            </ul>
         </div>
     </div>
 </nav>
