--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -13,6 +13,7 @@ body {
 	position: relative;
 	color: #AE3139;
 	font-size: 1rem;
+	font-family: 'Raleway', sans-serif;
 }
 
 .container {
@@ -105,16 +106,17 @@ p.description {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	z-index: 2;
+	z-index: 1;
 	transition: all 0.5s ease;
 }
 
 .navbar-dark .navbar-nav .nav-link {
 	color: #fff;
+	font-size: 1.2rem;
 }
 
 
-#navbarNavAltMarkup {
+#navbarNavAltDropdaown {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -212,19 +214,22 @@ h1.trending {
 .two-column .left {
 	width: 45%;
 	height: 700px;
+	border-radius: 10px;
+	text-align: center;
 }
 
 .two-column .right {
 	width: 45%;
 	display: flex;
 	flex-direction: column;
+	justify-content: space-around;
 }
 
 .two-column .left img {
-	width: 100%;
-	height: 100%;
-	object-fit: contain;
-
+	width: 80%;
+	object-fit: cover;
+	border-radius: 10px;
+	margin: 0 auto;
 }
 
 .two-column .right .trailor {
@@ -232,6 +237,11 @@ h1.trending {
 	height: 50%;
 
 }
+
+.detail {
+	margin-top: 150px;
+}
+
 
 
 .add {
@@ -420,4 +430,5 @@ h1.trending {
 #edit-form,
 #search-form {
 	width: 50%;
+	height: 400px;
 }
