--- a/app/templates/detail.html
+++ b/app/templates/detail.html
@@ -4,7 +4,7 @@
 {% block title %}{{movie.title}}{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container detail">
 
     <div class="two-column">
         <div class="left">
